--- a/Modify html and css/manifest.json
+++ b/Modify html and css/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 2,
+    
   "name": "Modify CSS and HTML",
   "version": "0.1.0",
   "description": "Lateral blog post demo extension",
@@ -7,7 +8,7 @@
   "content_scripts": [{
     "css": ["style.css"],
     "js": ["content.js"],
-    "matches": ["https://blog.lateral.io/*"]
+    "matches": ["<all_urls>"]
   }]
  
 }
